--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -62,6 +62,9 @@ body{
     margin-top: 20vh;
     margin-bottom: 20vh;
 }
+.row{
+    width: 100%;
+}
 .top{ 
     margin-top: 5vh;
 }
@@ -78,7 +81,6 @@ body{
     font-weight: bold;
     margin-top: 5vh;
     background-color: orange;
-    width: 12vw;
     padding: 10px;
     border-radius: 5px;
     box-shadow: 2px 2px black;
@@ -119,4 +121,19 @@ footer button{
     font-size: 1.8rem;
     height: 10vh;
     width: 30vw;
+}
+
+@media only screen and (orientation: portrait) {
+    h2{
+        font-size: 2.5rem;
+    }
+    p, li {
+        font-size: 2rem;
+    }
+    .promise p{
+        font-size: 2rem;
+    }
+    .step-num{
+        font-size: 2.5rem;
+    }
 }
