--- a/src/parallax/parallax.css
+++ b/src/parallax/parallax.css
@@ -18,3 +18,5 @@
     opacity: .75;
 }
 
+@media only screen and (orientation: portrait) {
+}
